sample-go-app/articles-api/k8s/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: articles-api
  labels:
    app: articles-api
spec:
  to:
    kind: Service
    name: articles-api
    weight: 100
  port:
    targetPort: 8080-tcp
